# ai-powered-api-client

./: Makefile  README.md  pyproject.toml
src/api_client/: __init__.py  caller.py  models.py  parser.py
tests/: test_caller.py  test_models.py  test_parser.py
